--- a/NorthwindTraderAPI/src/main/resources/application.properties
+++ b/NorthwindTraderAPI/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=NorthwindTraderAPI
+datasource.url=jdbc:mysql://localhost:3306/northwind
+datasource.username=root
+datasource.password=football8
